# c-gui

./: CMakeLists.txt  README.md  main.c  shuffle.c  shuffle.h  sudo.c  sudo.h  test.py
